--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <table cellspacing = 25px>
                 <tr>
                     <td>
-                        <img src = "./Snapchat-922678330.jpg" width="175" id="profile_image">
+                        <img src = "./Snapchat-922678330.jpg" width="175" class="profile_image shadow">
                     </td>
         
                     <td>
-                        <h1>PRAKHAR VERMA</h1>
+                        <h1 id = "name">Prakhar Verma</h1>
             <p><i>B.Tech ECE Undergrad<br><b>Jaypee Institute of Information Technology, Noida</b></i></p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae sed pariatur voluptatibus voluptas et modi dolore magnam! Totam vel temporibus corrupti assumenda ex ut beatae ea repudiandae, voluptas modi dolores.</p>
                     </td>
