--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <table cellspacing = 25px>
                 <tr>
                     <td>
-                        <img src = "./Snapchat-922678330.jpg" width="175" class="profile_image shadow">
+                        <img src = "./Snapchat-922678330.jpg" width="175" class="profile_image">
                     </td>
         
                     <td>
